2006-06-22  Martin Baulig  <martin@ximian.com>

	* class.cs
	(TypeContainer.GetNormalBases): Also use ResolveAsBaseTerminal()
	for interfaces; fixes #78686, which is a modification of #78380
	with interfaces instead of classes.

2006-06-21  Martin Baulig  <martin@ximian.com>

	* codegen.cs (CodeGen.Save): Moved the symbol file generation into
	the `try'-block, so we also report CS0016 etc. there.

2006-06-21  Martin Baulig  <martin@ximian.com>

	* ecore.cs (FieldExpr.EmitAssign, FieldExpr.AddressOf): Correctly
	handle SetAssigned() and SetMemberIsUsed() for generic types;
	fixes #77545.

2006-06-21  Martin Baulig  <martin@ximian.com>

	* delegate.cs
	(Delegate.VerifyMethod): Allow `params' methods; fixes #78678.

2006-06-21  Martin Baulig  <martin@ximian.com>

	* expression.cs (Unary.ResolveOperator): In `Operator.AddressOf',
	also report CS1686 for parameters.

2006-06-21  Martin Baulig  <martin@ximian.com>

	* statement.cs (GotoCase.Resolve): Report a warning (CS0469)
	instead of an error if the value is not implicitly convertible to
	the switch types; fixes #77964.

2006-06-21  Raja R Harinath  <rharinath@novell.com>

	Fix #78673
	* class.cs (FieldBase.ResolveInitializer): Stop resolution if
	FieldBuilder is null.

	Fix #78662
	* expression.cs (Binary.CheckShiftArguments): Don't overwrite original
	'left' and 'right' before error-checking.

2006-06-19  Martin Baulig  <martin@ximian.com>

	* convert.cs
	(Convert.ImplicitConversionStandard): Cleanup and correctly
	implement nullable conversions.
	(Convert.ImplicitStandardConversionExists): Likewise.
	(Convert.ExplicitConversion): Likewise.

2006-06-19  Martin Baulig  <martin@ximian.com>

	* generic.cs
	(Nullable.Wrap.Create, Nullable.Unwrap.Create): New public static
	methods; make the ctors protected.

2006-06-19  Martin Baulig  <martin@ximian.com>

	Fixed #78380; added gtest-273.cs.

	* ecore.cs
	(Expression.ResolveAsBaseTerminal): Move the constraint checking
	into ResolveAsTypeTerminal().

	* generic.cs