@@ -1,3 +1,7 @@
+2006-06-24  Marek Safar  <marek.safar@seznam.cz>
+
+	* report.cs: Add CS0469 warning.
+
 2006-06-21  Martin Baulig  <martin@ximian.com>
 
 	* codegen.cs (CodeGen.Save): Moved the symbol file generation into
