@@ -1,3 +1,7 @@
+2006-06-24  Marek Safar  <marek.safar@seznam.cz>
+
+	* report.cs: Add CS0469 warning.
+
 2006-06-22  Martin Baulig  <martin@ximian.com>
 
 	* class.cs
